--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>docker-jenkin-integration-sample</name>
+  <name>docker-jenkin-helloword-application</name>
+  docker-jenkin-helloword-application
   <url>http://maven.apache.org</url>
 
   <properties>
